# shelfready

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: ad_creative.py  ads.py  billing.py  demo.py  health.py  images.py  listings.py  master.py  photoshoot.py  research.py  router.py  social.py  usage.py  webhooks.py
backend/app/core/: auth.py  exceptions.py  quota.py  rate_limiter.py  security.py
backend/app/db/: repositories.py  supabase_client.py
backend/app/models/: enums.py  schemas.py
backend/app/prompts/: ad_prompts.py  image_prompts.py  listing_prompts.py  research_prompts.py  social_prompts.py
backend/app/services/: ad_generator.py  creative_service.py  email_service.py  grok_text.py  grok_vision.py  image_generator.py  lemonsqueezy_service.py  listing_generator.py  minimax_image.py  minimax_search.py  minimax_text.py  photoshoot_service.py  research_service.py  search_provider.py  social_generator.py  storage_service.py  stripe_service.py
backend/scripts/: README.md  cleanup_orphans.py  test_research_quality.py  wipe_test_images.py
backend/tests/: conftest.py
docs/: architecture.md
frontend/: .env.local.example  package-lock.json  package.json
supabase/: combined_migration.sql  seed.sql
tests/: competitive_intel_results.md  generate_100_templates.py  model_comparison_report.md  test_competitive_intel.py  test_competitive_intel_v2.py  test_grok_photoshoot.py  test_hybrid_vs_competitors.py  test_results.md  (+5 more)
(+84 files in other folders)
